Changed the way the counting of modules works for improved performance
git-svn-id: https://docperl.svn.sourceforge.net/svnroot/docperl/trunk/docperl@102 df482c85-7f0f-0410-bf46-9d4e49b368ba

--- a/data/templates/default/list.js.tmpl
+++ b/data/templates/default/list.js.tmpl
@@ -58,12 +58,13 @@ function count_tree( tree, counter ) {
 			for ( var t in data )
 				tt.push(t);
 			if ( data && tt.length )
-				count_tree( data, counter );
+				count += count_tree( data, counter );
 		}
 		else if ( tree[module].length > 0 )
 			count++;
 	}
-	add_count( counter, count );
+	//add_count( counter, count );
+	return count;
 }
 
 /**	
