--- a/data/templates/default/list.html.tmpl
+++ b/data/templates/default/list.html.tmpl
@@ -129,13 +129,13 @@
 					group++;
 					[% END %]
 					create_tree( local,	'local',	'local' );
-					count_tree( local, 'local' );
+					add_count( 'local', count_tree( local, 'local' ) );
 					setTimeout( setup_modules, 10 );
 				}
 				else if ( group == 1 ) {
 					level = 0;
 					var total_perl = create_tree( perl,	'perl',	'perl' );
-					count_tree( perl, 'perl' );
+					add_count( 'perl', count_tree( perl, 'perl' ) );
 					group++;
 					setTimeout( setup_modules, 10 );
 				}
@@ -143,7 +143,7 @@
 					level = 0;
 					group++;
 					create_tree( inc,	'inc',	'inc' );
-					count_tree( inc, 'inc' );
+					add_count( 'inc', count_tree( inc, 'inc' ) );
 					setTimeout( setup_modules, 10 );
 				}
 				else if ( group == 3 ) {
