--- a/data/templates/default/module.html.tmpl
+++ b/data/templates/default/module.html.tmpl
@@ -3,20 +3,20 @@
    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-frameset.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en-AU" xml:lang="en-AU">
 	<head>
-		<title>Perl Module Documentation for [% module %]</title>
-		<meta http-equiv="Content-Type"		content="text/html; charset=utf-8" />
-		<meta http-equiv="Content-Language"	content="en-au" />
-		<meta name="author"		 content="Ivan Wills" />
-		<meta name="copyright"	 content="Copyright (c) 2006 Ivan Wills, All Rights Reserved" />
+		<title>[% module %]</title>
+		<meta http-equiv="Content-Type"     content="text/html; charset=utf-8" />
+		<meta http-equiv="Content-Language" content="en-au" />
+		<meta name="author"      content="Ivan Wills" />
+		<meta name="copyright"   content="Copyright (c) 2006 Ivan Wills, All Rights Reserved" />
 		<meta name="description" content="" />
-		<meta name="keywords"	 content="" />
+		<meta name="keywords"    content="" />
 		<style type="text/css">
 			
 		</style>
 	</head>
 	<frameset rows="45,*">
-		<frame name="headding"	src="?page=module_head&amp;module=[% module %]&amp;location=[% location %]"></frame>
-		<frame name="contents"	src="?page=pod&amp;module=[% module %]&amp;location=[% location %]"></frame>
+		<frame name="headding" src="?page=module_head&amp;module=[% module %]&amp;location=[% location %]"></frame>
+		<frame name="contents" src="?page=pod&amp;module=[% module %]&amp;location=[% location %]"></frame>
 	</frameset>
 </html>
 
