Added checking for POD in a files API (also fixed extracting aoi from with in the POD if it existed)
git-svn-id: https://docperl.svn.sourceforge.net/svnroot/docperl/trunk/docperl@109 df482c85-7f0f-0410-bf46-9d4e49b368ba

--- a/data/templates/default/api.html.tmpl
+++ b/data/templates/default/api.html.tmpl
@@ -147,6 +147,10 @@
 				<td colspan="[% ApiColumns %]">[% api.version %]</td>
 			</tr>
 			[% END -%]
+			<tr>
+				<th>Contains POD</th>
+				<td colspan="[% ApiColumns %]">[% IF api.pod %][% api.pod %] Lines[% ELSE %]No POD[% END %]</td>
+			</tr>
 			[% IF api.modules %]
 			<tr>
 				<th rowspan="[% (api.modules.size - api.modules.size % ApiColumns + ApiColumns) / ApiColumns %]">Modules</th>
