--- a/data/templates/default/frames.html.tmpl
+++ b/data/templates/default/frames.html.tmpl
@@ -1,3 +1,4 @@
+[% UNLESS animation %][% animation = 60000 %][% END -%]
 <?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Frameset//EN"
    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-frameset.dtd">
@@ -31,12 +32,12 @@
 					document.title = 'Perl Documentation';
 					show = 'perl';
 				}
-				setTimeout( title, 10000 );
+				setTimeout( title, [% animation %] );
 			}
 		//-->
 		</script>
 	</head>
-	<frameset cols="255,*" onload=" setTimeout( title, 10000 ); ">
+	<frameset cols="255,*" onload=" setTimeout( title, [% animation %] ); ">
 		<frame name="menu" src="?page=list"></frame>
 		<frame name="main" src="?page=module&amp;module=[% module %]"></frame>
 	</frameset>
